@@ -1,0 +1,28 @@
+{
+  "list": [
+    {
+      "blacklist": [
+        "l2hostility:dispell"
+      ],
+      "difficulty": {
+        "apply_chance": 1.0,
+        "base": 10,
+        "min": 30,
+        "scale": 0.0,
+        "trait_chance": 1.0,
+        "variation": 0.0
+      },
+      "entities": [
+        "iceandfire:ghost"
+      ],
+      "items": [],
+      "traits": [
+        {
+          "free": 0,
+          "min": 1,
+          "trait": "l2hostility:dementor"
+        }
+      ]
+    }
+  ]
+}
